--- a/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
@@ -142,6 +142,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Resource Files\FamilyNames.txt" />
+    <Text Include="Resource Files\Names.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
