添加用于生成电话号码数据的原始数据

--- a/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
@@ -144,7 +144,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Resource Files\FamilyNames.txt" />
+    <Text Include="Resource Files\MobileMac.txt" />
     <Text Include="Resource Files\Names.txt" />
+    <Text Include="Resource Files\TelephoneMac.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
