集成数据库初始脚本

--- a/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
@@ -149,6 +149,9 @@
     <Text Include="ResourceFiles\Names.txt" />
     <Text Include="ResourceFiles\TelephoneMac.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ResourceFiles\InitDatabaseScript.sql" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
