添加初始化脚本（原始）

--- a/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataGenerater/DataGenerater.vcxproj
@@ -150,6 +150,7 @@
     <Text Include="ResourceFiles\TelephoneMac.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ResourceFiles\InitDatabaseScript(Org).sql" />
     <None Include="ResourceFiles\InitDatabaseScript.sql" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
