完成实现数据载入，实现软件外层接口

--- a/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign.vcxproj
+++ b/课设/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign/DataBaseSystemCurriculumDesign.vcxproj
@@ -257,6 +257,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Resources\MobileMac.txt" />
+    <Text Include="Resources\Setting.txt" />
     <Text Include="Resources\TelephoneMac.txt" />
   </ItemGroup>
   <ItemGroup>
